tests/pass/array_3.crdm
fn main() {
    let increment: fn(&int) -> void = |x| void -> { x += 1; };

    let b: [fn(&int) -> void] = [increment];
}