tests/fail/closure_4.crdm
fn main() {
    let increment: fn(&int) -> void = |x| void -> { x += 1; };

    let closure_ret_closure: fn() -> fn(&string) -> void = || fn(&int) -> void -> { return increment; };

    closure_ret_closure()(1);
}